#
# Copyright (c) 2017 Martin Sustrik  All rights reserved.
# Copyright (c) 2016 Tai Chi Minh Ralph Eastwood
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom
# the Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

man3_MANS = \
    bundle.3 \
    bundle_go.3 \
    bundle_go_mem.3 \
    bundle_wait.3 \
    bundle_mem.3 \
    chdone.3 \
    chmake.3 \
    chmake_mem.3 \
    choose.3 \
    chrecv.3 \
    chsend.3 \
    fdclean.3 \
    fdin.3 \
    fdout.3 \
    go.3 \
    go_mem.3 \
    hclose.3 \
    hmake.3 \
    hown.3 \
    hquery.3 \
    msleep.3 \
    now.3 \
    yield.3 \
    \
    brecv.3 \
    brecvl.3 \
    bsend.3 \
    bsendl.3 \
    http_attach.3 \
    http_attach_mem.3 \
    http_detach.3 \
    http_done.3 \
    http_recvfield.3 \
    http_recvrequest.3 \
    http_recvstatus.3 \
    http_sendfield.3 \
    http_sendrequest.3 \
    http_sendstatus.3 \
    ipaddr_family.3 \
    ipaddr_len.3 \
    ipaddr_local.3 \
    ipaddr_port.3 \
    ipaddr_remote.3 \
    ipaddr_setport.3 \
    ipaddr_sockaddr.3 \
    ipaddr_str.3 \
    ipc_accept.3 \
    ipc_accept_mem.3 \
    ipc_close.3 \
    ipc_connect.3 \
    ipc_connect_mem.3 \
    ipc_done.3 \
    ipc_listen.3 \
    ipc_listen_mem.3 \
    ipc_pair.3 \
    ipc_pair_mem.3 \
    mrecv.3 \
    mrecvl.3 \
    msend.3 \
    msendl.3 \
    prefix_attach.3 \
    prefix_attach_mem.3 \
    prefix_detach.3 \
    suffix_attach.3 \
    suffix_attach_mem.3 \
    suffix_detach.3 \
    tcp_done.3 \
    tcp_accept.3 \
    tcp_accept_mem.3 \
    tcp_close.3 \
    tcp_connect.3 \
    tcp_connect_mem.3 \
    tcp_listen.3 \
    tcp_listen_mem.3 \
    term_attach.3 \
    term_attach_mem.3 \
    term_detach.3 \
    term_done.3 \
    tls_attach_client.3 \
    tls_attach_client_mem.3 \
    tls_attach_server.3 \
    tls_attach_server_mem.3 \
    tls_detach.3 \
    tls_done.3 \
    udp_open.3 \
    udp_open_mem.3 \
    udp_send.3 \
    udp_sendl.3 \
    udp_recv.3 \
    udp_recvl.3 \
    ws_attach_client.3 \
    ws_attach_client_mem.3 \
    ws_attach_server.3 \
    ws_attach_server_mem.3 \
    ws_detach.3 \
    ws_done.3 \
    ws_recv.3 \
    ws_recvl.3 \
    ws_request_key.3 \
    ws_response_key.3 \
    ws_send.3 \
    ws_sendl.3

SUFFIXES = .3

man-local: $(man3_MANS)

EXTRA_DIST = $(man3_MANS)

